# automata

./: .gitignore  README.md
LL1TableGenerator/: LL1TableGenerator.sln
LL1TableGenerator/LL1TableGenerator/: LL1TableGenerator.cpp  LL1TableGenerator.vcxproj  input.txt  (+3 more)
Lexer/: Lexer.sln
lab1/: input_graph.csv  input_mealy.csv  input_mealy_2.csv  input_mealy_3.csv  input_mealy_4.csv  input_mealy_5.csv  input_mealy_6.csv  input_mealy_9.csv  input_moore.csv  input_moore_9.csv  main.py  output.csv  output_graph.csv  visualize.py
lab2/: input_dna.xlsx  input_graph.csv  input_moore_2.csv  main.py  output1.csv
lab3/GrammarToDSM/: CMakeLists.txt  main.cpp
lab3/GrammarToDSM/src/Args/: Args.h  ArgsParser.h
lab3/GrammarToDSM/src/Common/: GrammarSide.h  Lettering.h  Utils.h
lab3/GrammarToDSM/src/Converter/: DSMConverter.cpp  DSMConverter.h
lab3/GrammarToDSM/src/GrammarParser/: GrammarParser.cpp  GrammarParser.h
lab3/GrammarToDSM/src/Machine/: Machine.h
lab3/GrammarToDSM/src/MachineSaver/: MachineSaver.h
lab3/GrammarToDSM/tests/: left-side-grammar.txt
lab3/NotDSMToDSM/: CMakeLists.txt  main.cpp
lab3/NotDSMToDSM/src/Args/: Args.h  ArgsParser.h
lab3/NotDSMToDSM/src/Common/: Lettering.h
lab3/NotDSMToDSM/src/Converter/: DSMConverter.cpp  DSMConverter.h
lab3/NotDSMToDSM/src/Converter/EmptyStateRemover/: EmptyStateRemover.cpp  EmptyStateRemover.h
lab3/NotDSMToDSM/src/Machine/: Machine.h
lab3/NotDSMToDSM/src/MachineSaver/: MachineSaver.cpp
lab3/NotDSMToDSM/src/TextParser/: CSVTextParser.cpp  CSVTextParser.h
lab4/: main.py  out.csv.txt
src/: main.cpp
(+32 files in other folders)
